--- a/style.css
+++ b/style.css
@@ -10,32 +10,44 @@
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  block-talk
 */
-
 .hero {
   display: flex;
-  align-items: center;
+  align-content: center;
   justify-content: center;
-  padding: 20px;
   background-position: center;
   background-size: cover;
-  padding-bottom: 50px;
+}
+
+.hero__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .5);
 }
 
 .hero__text {
-  max-width: 600px;
+  width: 600px;
   text-align: center;
+  padding: 20px;
+  color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
-.hero__title:before {
+.hero__title::before {
   display: none;
 }
 
 .hero a.hero__cta {
+  display: inline-block;
   background: #333;
   color: #fff;
+  padding: 10px 20px;
   text-decoration: none;
-  padding: 10px;
   transition: background-color .3s;
+  margin-bottom: 20px;
 }
 
 .hero a.hero__cta:hover,
